Systems/Patching/Web/Templates/PatchingScreen.css
#PatchingScreen {
    margin: 0 auto;
    width: 1160px;
}

.PatchingScreen-activateWrap {
    overflow: hidden;
}

.PatchingScreen-activateWrap-left {
    float: left;
}

/* System ID section */
.PatchingScreen-activateWrap.hidden {
    display: none;
}

.PatchingScreen-idTextFieldWrap {
    overflow: hidden;
}

.PatchingScreen-activateWrap button.hidden {
    display: none;
}

.PatchingScreen-idTextFieldWrap.hidden {
    display: none;
}

#PatchingScreen-systemidWrap {
    line-height: 22px;
}

#PatchingScreen-changeIdBtn {
    margin: 0 0 0 24px;
}

#PatchingScreen-cancelChangeBtn {
    margin: 0 0 0 33px;
}

#PatchingScreen-checkAsapBtn {
    float: right;
}

#PatchingScreen-addNewUser {
    float: right;
}

div.PatchingScreen-activateWrap span.PatchingScreen-lastUpdatedString {
    float: right;
}

div.PatchingScreen-activateWrap span.PatchingScreen-subscriptionInfo {
    float: right;
}

#PatchingScreen-notifyUpdates {
    float: right;
}

div.PatchingScreen-activateWrap span {
    float: left;
    margin-top: 5px;
}

#PatchingScreen-activateDemoBtn {
    float: left;
    margin-left: 43px;
}

#PatchingScreen-activateIdText {
    float: left;
}

#PatchingScreen-cancelActivationBtn {
    float: left;
    margin-left: 45px;
}

/* New Updates Table */
#newUpdates-table td {
    vertical-align: top;
}

#newUpdates-table td.col-patchId {
    width: 140px;
}

#newUpdates-table td.col-summary {
    width: 600px;
}

/* Installed Updates Table */
#installedUpdates-table td {
    vertical-align: top;
}

#installedUpdates-table td.col-patchId {
    width: 140px;
}

#installedUpdates-table td.col-summary {
    width: 600px;
}

.PatchingScreen-summary {
    position: relative;
}

span.PatchingScreen-expander {
    cursor: pointer;
    display: block;
    height: 14px;
    left: 550px;
    position: absolute;
    top: 0;
    width: 14px;
}

.PatchingScreen-scheduleMsg {
    float: left;
    margin: 7px 10px 0 0;
}

.PatchingScreen-summary span.PatchingScreen-expander {
    background: url(../../../SquizSuite/Web/Templates/expander.png) no-repeat scroll 0 0px transparent;
}

.PatchingScreen-summary.full span.PatchingScreen-expander {
    background: url(../../../SquizSuite/Web/Templates/expander.png) no-repeat scroll 0 -14px transparent;
}

.PatchingScreen-summary.hidden {
    display: none;
    visibility: hidden;
}

.PatchingScreen-scheduled {
    background: url(tick.png) no-repeat scroll 0 0 transparent;
    height: 19px;
    padding: 3px 0 0 27px;
}

.PatchingScreen-scheduled.not {
    background-image: url(cross.png);
}

#PatchingScreen-schedulePatch {
    float: left;
    width: 110px;
}

.PatchingScreen-scheduleDatePicker {
    float: left;
    margin-top: 6px;
}

.PatchingScreen-scheduleDatePicker.hidden {
    display: none;
    visibility: hidden;
}

.PatchingScreen-scheduleDatePicker select {
    margin-right: 5px;
}

.PatchingScreen-notifyRow {
    overflow: hidden;
}

.PatchingScreen-notifyUserIcon {
    float: left;
    height: 24px;
    width: 30px;
    background: url("/__web/Systems/User/AssetTypes/User/Web/icon_user_s.png") repeat scroll 0 0 transparent;
}

.PatchingScreen-notifyName {
    float: left;
    margin: 4px 0 0 5px;
}

#patchingSettings .GUIScreenSettings-item.deleted {
    background: url("/__web/Systems/GUI/Web/delete_overlay.png") repeat scroll 0 0 transparent;
}

.PatchingScreen-notifyDelete {
    float: right;
    height: 16px;
    width: 16px;
    cursor: pointer;
    background: url("/__web/Systems/GUI/Web/delete.png") repeat scroll 0 0 transparent;
    margin-top: 4px;
}

.PatchingScreen-notifyDelete.deleted {
    background: url("/__web/Systems/GUI/Web/delete.png") repeat scroll 0 16px transparent;
}

